--- a/github.html
+++ b/github.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/js/github-information.js"></script>
+    <script type="text/javascript" src="assets/js/github-information.js"></script>
     <title>Rosie</title>
 </head>
 
@@ -30,7 +30,7 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer row">
+                        <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-2 ui-menu-color-home list-inline-item menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
@@ -63,7 +63,7 @@
                 <h5 class="uppercase text-center">You can also search on other user profiles</h5>
 
                 <div class="center-form">
-                    <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()" />
+                    <input type="text" id="gh-username" value="tonnyg95" oninput="fetchGitHubInformation()" />
                     <div id="gh-user-data"></div>
                     <div id="gh-repo-data"></div>
 
