--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
     <script type="text/javascript">
         (function() {
-            emailjs.init("[UserID]");
+            emailjs.init("[EmailJSUserID]");
         })();
     </script>
 </head>
